--- a/layouts/_default/covid.html
+++ b/layouts/_default/covid.html
@@ -29,7 +29,7 @@
             <p> {{ .pullquote }} </p>
             <hr />
         {{ end }} -->
-        <h4> covid response </h4>h4>
+        <h4> covid response html </h4>
     </div>
 
 
